[package]
name = "ableton-link-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
bincode = { version = "2.0.0-rc.3", features = ["derive", "serde"] }
thiserror = "1.0.48"
socket2 = "0.5.3"

[dev-dependencies]
hex = "0.4.3"
