[package]
name = "ableton-link-rs"
version = "0.3.0"
edition = "2021"
description = "Native Rust implementation of the Ableton Link protocol"
license = "GPL-3.0"
repository = "https://github.com/anweiss/ableton-link-rs"
exclude = [
    "vendor/",
    "target/",
    ".vscode/",
    ".idea/",
    "Dockerfile",
    ".dockerignore",
    "test_interop.sh",
    "*.tar",
    "*.log",
    ".DS_Store",
    ".git/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "tokio",
    "thiserror",
    "socket2",
    "tracing-subscriber",
    "async-trait",
    "local-ip-address",
    "triple_buffer",
    "rodio",
    "if-addrs",
    "network-interface",
    "libc",
    "hex/std",
    "chrono/std",
    "rand/std",
    "rand/std_rng",
    "rand/thread_rng",
]

[dependencies]
rand = { version = "0.10.0", default-features = false }
tokio = { version = "1", features = ["full"], optional = true }
thiserror = { version = "1.0.48", optional = true }
socket2 = { version = "0.5.3", features = ["all"], optional = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
async-trait = { version = "0.1.73", optional = true }
chrono = { version = "0.4.31", default-features = false, features = ["alloc"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
local-ip-address = { version = "0.5.6", optional = true }
triple_buffer = { version = "8.1.1", optional = true }
rodio = { version = "0.21.1", optional = true }
if-addrs = { version = "0.15.0", optional = true }
network-interface = { version = "2.0.3", optional = true }

[dependencies.libc]
version = "0.2"
optional = true

[target.'cfg(unix)'.dependencies]
termios = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "profileapi",
    "libloaderapi",
    "processthreadsapi",
    "iphlpapi",
    "iptypes",
    "ws2def",
    "winerror",
    "consoleapi",
    "wincon",
    "handleapi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[dev-dependencies]
console-subscriber = "0.5.0"

[[example]]
name = "rusthut"
path = "examples/rusthut.rs"

[[example]]
name = "platform_demo"
path = "examples/platform_demo.rs"
